--- a/store/templates/store/footer.html
+++ b/store/templates/store/footer.html
@@ -15,7 +15,7 @@
                         <ul class="footer-links">
                             <li><a href="#"><i class="fa fa-map-marker"></i>Good brother plaza beside com. prize s/mart opp. oruerue plaza, uromi, edo state</a></li>
                             <li><a href="tel+234 812 055 0112"><i class="fa fa-phone"></i>+234 812 055 0112</a></li>
-                            <li><a href="#"><i class="fa fa-envelope-o"></i>info@kenstech.com</a></li>
+                            <li><a href="#"><i class="fa fa-envelope-o"></i>info@kenstechsupport.com</a></li>
                         </ul>
                     </div>
                 </div>
