--- a/store/templates/store/navigation.html
+++ b/store/templates/store/navigation.html
@@ -5,7 +5,7 @@
         <!-- responsive-nav -->
         <div id="responsive-nav">
             <!-- NAV -->
-            <ul class="main-nav nav navbar-nav">
+            <ul class="main-nav nav navbar-nav2">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#">Hot Deals</a></li>
                 <li><a href="#">Categories</a></li>
