--- a/store/templates/store/script.html
+++ b/store/templates/store/script.html
@@ -69,7 +69,11 @@
     // Update the countdown every second
     setInterval(updateCountdown, 1000);
   </script>
-
+<!-- MDB -->
+<script
+  type="text/javascript"
+  src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.js"
+></script>
 <!-- jQuery Plugins -->
 <script src="{% static 'js/jquery.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
