--- a/store/templates/store/top-header.html
+++ b/store/templates/store/top-header.html
@@ -1,20 +1,22 @@
+{% if messages %}
+    <div class="messages">
+        {% for message in messages %}
+            <div class="message {% if message.tags %}{{ message.tags }}{% endif %}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    </div>
+{% endif %}
+
 <!-- TOP HEADER -->
 <div id="top-header">
-    {% if messages %}
-        <div class="messages">
-            {% for message in messages %}
-                <div class="message {% if message.tags %}{{ message.tags }}{% endif %}">
-                    {{ message }}
-                </div>
-            {% endfor %}
-        </div>
-    {% endif %}
+    
 
     <div class="container">
         <ul class="header-links pull-left">
             <a href="mailto:"></a>
             <li><a href="tel:+234 812 055 0112"><i class="fa fa-phone"></i> +234 812 055 0112</a></li>
-            <li><a href="mailto:info@kenstech.com"><i class="fa fa-envelope-o"></i> info@kenstech.com</a></li>
+            <li><a href="mailto:info@kenstechsupport.com"><i class="fa fa-envelope-o"></i> info@kenstechsupport.com</a></li>
             <li><a href=""><i class="fa fa-map-marker"></i> Good brother plaza beside com. prize s/mart opp. oruerue plaza, uromi, edo state</a></li>
         </ul>
         <ul class="header-links pull-right">
